Se le agrego el login usando firebase, se registra y loguea

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>E-commerce</title>
+    <title>GOA7</title>
   </head>
   <body>
-    <noscript>PURAUTD</noscript>
+    <noscript>PURAUTD GOA7 SIUU</noscript>
     <div id="root"></div>
 
   </body>
